# szafir-flatpak

./: .gitignore  .gitmodules  Makefile  README.en.md  README.md  README.pl.md  components.json  pl.deno.kir.szafirhostproxy-inprocess--extra-all.yml  pl.deno.kir.szafirhostproxy-inprocess--extra-empty.yml  pl.deno.kir.szafirhostproxy-inprocess--extra-empty_missing.yml  pl.deno.kir.szafirhostproxy-inprocess--extra-runtime.yml  pl.deno.kir.szafirhostproxy-inprocess--extra-runtime_missing.yml  pl.deno.kir.szafirhostproxy-inprocess.metainfo.xml  pl.deno.kir.szafirhostproxy-split.metainfo.xml  pl.deno.kir.szafirhostproxy-split.yml  pl.deno.kir.szafirhostproxy.desktop  pl.kir.szafir.desktop  pl.kir.szafir.metainfo.xml  pl.kir.szafir.yml  pl.kir.szafirhost.metainfo.xml  pl.kir.szafirhost.yml  repo-signing-key.gpg  szafir_license_pl.md
.githooks/: pre-commit
.github/workflows/: release.yml
scripts/: generate_permissions_header.py  query_releases.py  render_manifest.py
szafir-host-proxy/: AppSettings.h  CMakeLists.txt  Component.h  ComponentDownloader.cpp  ComponentDownloader.h  ComponentInfo.cpp  ComponentInfo.h  HostRuntimeController.cpp  HostRuntimeController.h  LandlockEnv.h  LandlockFlags.h  LandlockSandbox.cpp  LandlockSandbox.h  MainWindow.cpp  MainWindow.h  NativeHostIntegrator.cpp  NativeHostIntegrator.h  NativeMessagingService.cpp  NativeMessagingService.h  PathUtils.h  ScalingController.cpp  ScalingController.h  SetupController.cpp  SetupController.h  components.json  config.h.in  flatpak-host-wrapper.in  generated_permissions.h  main.cpp  permissions.yml  pl.deno.kir.szafirhostproxy-inprocess.metainfo.xml  pl.deno.kir.szafirhostproxy-split.metainfo.xml  releases.yml  start-szafir-host-native.sh  system_components.json  szafir-host-proxy.desktop.in  szafir-host-proxy.service.in  szafir_license_en.md  szafirhost-integration.xml.in
szafir-host-proxy/flatpak-host-wrapper.d/: 50-icon-example.sh
szafir-host-proxy/qml/: AnimatedStateButton.qml  AnimatedStateButtonDemo.qml  DownloadPage.qml  LicensePage.qml  MainWindow.qml  MissingHostPage.qml  StatusPage.qml  SzafirHostAboutPage.qml  WelcomePage.qml
szafir-host-proxy/translations/pl/: szafir-host-proxy.po
templates/manifests/: proxy.yml.j2  szafir.yml.j2  szafirhost.yml.j2
templates/manifests/fragments/: openjdk_module.yml.j2  pcsc_cleanup.yml.j2  pcsc_lite_module.yml.j2
templates/metainfo/: proxy.metainfo.xml.j2  szafirhost.metainfo.xml.j2
templates/metainfo/fragments/: proxy_screenshots.xml.j2
